# x-transformers

./: IOtest.py  README.md  iotest2.py  pyproject.toml  setup.cfg  setup.py  test.py  train.py  train_belief_state.py  train_copy.py  train_entropy_tokenizer.py  train_enwik8.py  train_enwik8_lejepa_style.py  train_free.py  train_gpt_vae.py  train_length_extrapolate.py  train_parity.py  train_path_star.py  train_self_masked_repr.py  train_with_muon.py  train_xl_enwik8.py
.github/workflows/: python-publish.yml  python-test.yaml
examples/enwik8_simple/: train.py  train_nar.py
examples/imbd_classification/: classification.py
examples/toy_tasks/: enc_dec_copy.py
memory_experiments/: MT_experiments.ipynb  MT_experiments_gen_val.ipynb
memory_experiments/data/: copy_X.npy  copy_y.npy  listops_X.npy  listops_y.npy  retrieval_X.npy  retrieval_y.npy  reverse_X.npy  reverse_y.npy
memory_experiments/log_comp/: events.out.tfevents.1626522996.ayd98-pro.3815.1  (+1 more)
tests/: classification_test.py  test_external.py  test_kv_cache.py  test_x_transformers.py
x_transformers/: __init__.py  attend.py  autoregressive_wrapper.py  belief_state.py  belief_state_wrapper.py  continuous.py  continuous_autoencoder.py  continuous_autoregressive_wrapper.py  dpo.py  entropy_based_tokenizer.py  free_transformer.py  funnel.py  gpt_lejepa.py  gpt_vae.py  multi_IO_transformers.py  multi_input.py  neo_mlp.py  next_latent_wrapper.py  non_autoregressive_wrapper.py  nonautoregressive_wrapper.py  up_wrapper.py  x_transformers.py  xl_autoregressive_wrapper.py  xval.py
(+6 files in other folders)
